[package]
name = "aspen-server"
version = "0.1.0"
authors = ["Tom Cocagne <cocagne@us.ibm.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "0.7", features = ["v4"] }
time = "0.1"
crc32fast = "1.2.0"