[package]
name = "aspen-server"
version = "0.1.0"
authors = ["Tom Cocagne <cocagne@us.ibm.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "0.7", features = ["v4"] }
time = "0.1"
crc32fast = "1.2.0"
integer-encoding = "1.0.7"
crossbeam = "0.7.2"
tempdir = "0.3.7" 
toml = "0.5.3"
bitflags = "1.1.0"
clap = "2.33.0"
log = "0.4.8"
env_logger = "0.6.2"
libc = "0.2.62"